@@ -1713,7 +1713,10 @@ dwarf_query::blacklisted_p(string const & funcname,
   string filename_s = filename ? filename : ""; // is passed as const char*
   if (funcname == "do_IRQ" ||
       filename_s == "kernel/kprobes.c" ||
-      0 == fnmatch ("arch/*/kernel/kprobes.c", filename, 0))
+      0 == fnmatch ("arch/*/kernel/kprobes.c", filename, 0) ||
+      (has_return && (funcname == "sys_execve" || // bug #1345
+                      funcname == "sys_exit" ||
+                      funcname == "sys_groupexit")))
     {
       if (sess.verbose)
         clog << "skipping function '" << funcname << "' file '"
