@@ -1,3 +1,10 @@
+2005-11-08  Frank Ch. Eigler  <fche@redhat.com>
+
+	* tapsets.cxx (blacklisted_p): Add blacklist for some .return
+	probes to kludge around bug #1345.
+	* tapset/system_calls.stp: Add some %( %? %) conditionals to
+	get closer to using tapset on 2.6.9 kernel.
+
 2005-11-07  Frank Ch. Eigler  <fche@redhat.com>
 
 	PR 1828.
